<resources>
    <string name="app_name">TBC Academy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="text">Your tasty chef poppins application ready to serve, start your journey now</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="trending_recipes">Trending Recipes</string>
    <string name="_2">2</string>
    <string name="add_0_ingredients">add 0 ingredients</string>
    <string name="search">Search</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="artichoke">Artichoke</string>
    <string name="view_all"><u>VIEW ALL</u></string>
    <string name="search_by_meal">Search by Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="recipe">RECIPE</string>
    <string name="sample_text">test string sample text</string>
    <string name="ingredients">Ingredients</string>
    <string name="serves_0">Serves 0</string>
    <string name="directions">Directions</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="selected_recipes">Selected Recipes</string>
    <string name="sort_by_ingredients">Sort by Ingredients</string>
    <string name="sort_by_meal">Sort by Meal</string>
    <string name="cook_master">Cook Master</string>
    <string name="all_caps_cook_master">COOK MASTER</string>
    <string name="cooking_made_simple_with_love">Cooking made simple, with love.</string>
    <string name="category_name">Category Name</string>
    <string name="no_items_found">No items found</string>
    <string name="logout">Logout</string>
</resources>