<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iwBackArrow"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/twLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailFieldLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/fields_design"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toBottomOf="@id/twLoginText"
        tools:text="user@gmail.com" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordFieldLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/fields_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toBottomOf="@id/etEmailFieldLogin"
        tools:text="user@gmail.com" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextLogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_button_design"
        android:text="@string/next"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/etPasswordFieldLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>